    - Change systemd-sysv's conflicts to upstart-sysv. (LP: #1422681)

    Upgrade fixes, keep until 16.04 LTS release:
    - systemd Conflicts/Replaces/Provides systemd-services.
    - Remove obsolete systemd-logind upstart job.
    - Clean up obsolete /etc/udev/rules.d/README.
    - systemd.postinst: Migrate mountall specific fstab options to standard
      util-linux "nofail" option.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 27 Aug 2015 08:08:12 +0200

systemd (224-3) UNRELEASED; urgency=medium

  * Add better fix for "systemctl link/enable" breakage with full paths.
    (LP: #1480310)

 -- Martin Pitt <mpitt@debian.org>  Wed, 26 Aug 2015 10:33:42 +0200

systemd (224-2) unstable; urgency=medium

  [ Martin Pitt ]
  * Skip systemd-fsckd autopkgtest if /run/initramfs/fsck-root exists, i. e.
    the initramfs already ran fsck.
  * Fix broken ACL in tmpfiles.d/systemd.conf. (Closes: #794645, LP: #1480552)
  * Add debian/tests/unit-config: Test "systemctl link"; reproduces LP#1480310.
  * Add a hack to unbreak "systemctl link". (LP: #1480310)
  * debian/extra/rules-ubuntu/40-hyperv-hotadd.rules: Also apply to Xen, and
    rename to 40-vm-hotadd.rules.
  * Fix networkd crash. (Closes: #796358)
  * debian/rules: Remove all files/empty dirs in systemd which are already
    shipped by systemd-* or udev, instead of an explicit list.
  * Bump "mount" dependency to >= 2.26, to ensure "swapon -o" availability.
    (Closes: #796389)
  * Install /lib/systemd/network/* into udev instead of systemd, as it's
    really udev which is evaluating these.
  * Split out "systemd-container" package with machined and nspawn and enable
    importd. Add new libbz2-dev, zlib1g-dev, and libcurl-dev build deps.
    (LP: #1448900)
  * Move transitional libgcrypt11-dev build dep to libgcrypt20-dev.
  * debian/rules: Limit check for libraries in /usr to systemd and udev
    packages, as other packages like systemd-containers can (and do) link to
    /usr.