@@ -37,7 +37,6 @@ Build-Depends: debhelper (>= 9.20141010),
                libbz2-dev <!stage1>,
                zlib1g-dev <!stage1> | libz-dev <!stage1>,
                libcurl4-gnutls-dev <!stage1> | libcurl-dev <!stage1>,
-               libmicrohttpd-dev <!stage1>,
                libgcrypt20-dev,
                libkmod-dev (>= 15),
                libblkid-dev (>= 2.24),
