@@ -48,6 +48,9 @@ systemd (224-2ubuntu1) UNRELEASED; urgency=medium
     - systemd.postinst: Migrate mountall specific fstab options to standard
       util-linux "nofail" option.
 
+  * Don't build new systemd-journal-remote package and drop libmicrohttpd-dev.
+    This is blocked by the MIR (LP #1488341) and feature freeze.
+
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 27 Aug 2015 08:08:12 +0200
 
 systemd (224-3) UNRELEASED; urgency=medium
